src/test/deca/context/invalid/testUndefinedType.deca
// Description : Type indéfini
{
    String x;
}
